Atualizar o Index.html

--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,44 @@
-Primeira versão
+<!DOCTYPE html>
+<html lang="Pt">
+ <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="Bla.css">
+  <title>JJ site</title>
+ </head>
+ <body>
+   <div class="container">
+    <nav>
+       <ul>
+          <li>
+         <a href="Index.html">Sobre JJ</a>
+         </li>
+         <li>
+           <a href="Contact.html">Contate JJ</a>
+         </li>
+       </ul>
+     </nav>
+     <header>
+       <div class="center">
+         <img src="jj.jpg"></img>
+       </div>
+       <h1>João Joaquim</h1>
+       <h2>Técnico em informática(Ou quase isso)</h2>
+     </header>
+     <main>
+       <section>
+         <h3>Sobre JJ</h3>
+       João Joaquim é um adolescente de 16 anos que mora na mirolandia(Lugarzinho abençoado), sempre foi um rapaz calmo que nunca trouxe muitos problemas, o tal do orgulho da família(Até estuda naquela tal de Federal)
+       <h3>Curiosidade</h4>
+       A mãe dele diz que ele é lindo(Ele suspeita de que seja mentira)
+     </section>
+     </main>
+     <footer>
+       <a href="https://www.instagram.com/joao._joaquim?igsh=MWlzNm5jdW9hdmVweg==" target="_blank" rel="noopener noreferrer">Instagram</a>
+       <img src="insta.png">
+       <a href="https://github.com/JJ3040" target="_blank" rel="noopener noreferrer">Github</a>
+       <img src="github.png">
+     </footer>
+   </div>
+ </body>
+</html>
