Atualizar o Index.html

--- a/Index.html
+++ b/Index.html
@@ -23,14 +23,14 @@
          <img src="jj.jpg"></img>
        </div>
        <h1>João Joaquim</h1>
-       <h2>Técnico em informática(Ou quase isso)</h2>
+       <h2>Técnico em informática</h2>
      </header>
      <main>
        <section>
          <h3>Sobre JJ</h3>
-       João Joaquim é um adolescente de 16 anos que mora na mirolandia(Lugarzinho abençoado), sempre foi um rapaz calmo que nunca trouxe muitos problemas, o tal do orgulho da família(Até estuda naquela tal de Federal)
+       <p>João Joaquim é um adolescente de 16 anos que mora na mirolandia(Lugarzinho abençoado), sempre foi um rapaz calmo que nunca trouxe muitos problemas, o tal do orgulho da família(Até estuda naquela tal de Federal)</p>
        <h3>Curiosidade</h4>
-       A mãe dele diz que ele é lindo(Ele suspeita de que seja mentira)
+       <p>A mãe dele diz que ele é lindo(Ele suspeita de que seja mentira)</p>
      </section>
      </main>
      <footer>
