--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
      </nav>
      <header>
        <div class="center">
-         <img src="jj.jpg"></img>
+         <img src="jj.jpg">
        </div>
        <h1>João Joaquim</h1>
        <h2>Técnico em informática</h2>
